src/app/features/tour/tour-overview/tour-overview.css
.container {
  display: flex;
  height: 100vh;
  gap: 10px;
}

/* LEFT */
.left {
  flex: 1;
  min-width: 250px;
  border-right: 1px solid #ccc;
  padding: 10px;

  overflow-y: auto;
}

/* RIGHT */
.right {
  flex: 2;
  padding: 10px;

  display: flex;
  flex-direction: column;
}

/* MAP */
.map {
  height: 200px;
  background: lightgray;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
}

/* MOBILE */
@media (max-width: 800px) {
  .container {
    flex-direction: column;
  }

  .left {
    width: 100%;
    border-right: none;
  }

  @media (max-width: 800px) {
  .container {
    flex-direction: column;
  }

  .right {
    display: block;
  }
}

  .mobile-details{
    display: block;
  }
}

.list-header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 16px;
  border-bottom: 1px solid #eee;
}


.icons button {
  background: #3498db;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 6px 10px;
  cursor: pointer;
}

.icons button:hover {
  background: #2980b9;
}

.actions {
  margin-top: 15px;
  display: flex;
  gap: 10px;
  flex-wrap: wrap;
}


.btn {
  padding: 8px 14px;
  border: none;
  border-radius: 6px;
  font-size: 14px;
  cursor: pointer;
  transition: 0.2s;
  color: white;
}

.btn.delete {
  background-color: #e74c3c;
}

.btn.edit {
  background-color: #3498db;
}

.btn.logs {
  background-color: #2ecc71;
}

.btn.delete:hover {
  background-color: #c0392b;
}

.btn.edit:hover {
  background-color: #2980b9;
}

.btn.logs:hover {
  background-color: #27ae60;
}

.details {
  display: flex;
  flex-direction: column;
  gap: 6px;
}

.mobile-details {
  display: none;
}



.empty-state {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  text-align: center;
  color: #777;
}

.empty-state img {
  width: 80px;
  margin-bottom: 15px;
  opacity: 0.8;
}

.create-link {
  color: #3498db;
  text-decoration: none;
  font-weight: 500;
}

.create-link:hover {
  text-decoration: underline;
}

